# advent-of-code

./: .gitignore  .hspec  README.md  advent-of-code.cabal  hie.yaml  package.yaml
.github/workflows/: haskell.yaml
src/: Utils.hs  aoc-1.hs  aoc-2.hs  aoc-3.hs  aoc-4.hs  aoc-5.hs  aoc-6.hs
src/AOC/: Problem01.hs  Problem02.hs  Problem03.hs  Problem04.hs  Problem05.hs  Problem06.hs  Problem07.hs  Problem08.hs  Problem09.hs  Problem10.hs  Problem11.hs  Problem12.hs  Problem13.hs
src/AOC/Problem12/: Part1.hs  Part2.hs  Shared.hs
test/: SpecHelper.hs
test/AOC/: Problem01Spec.hs  Problem02Spec.hs  Problem03Spec.hs  Problem04Spec.hs  Problem05Spec.hs  Problem06Spec.hs  Problem07Spec.hs  Problem08Spec.hs  Problem09Spec.hs  Problem10Spec.hs  Problem11Spec.hs  Problem12Spec.hs  Problem13Spec.hs
