cabal-version:       >=1.10

name:                 advent-of-code
version:              0.1.0.0
synopsis:             Advent of Code in Haskell
description:          Learning Haskell by solving AoC problems
license:              GPL-3.0
license-file:         LICENSE
author:               Hussein Taher
maintainer:           hussein_taher@outlook.com
build-type:           Simple
extra-source-files:   README.md

executable aoc-1
  hs-source-dirs:       src
  main-is:              aoc-1.hs
  build-depends:        base

source-repository head
  type:     git
  location: git://github.com/Husenap/advent-of-code.git