cabal-version:       >=1.10

name:                 advent-of-code
version:              0.1.0.0
synopsis:             Advent of Code in Haskell
description:          Learning Haskell by solving AoC problems
license:              GPL-3.0
license-file:         LICENSE
author:               Hussein Taher
maintainer:           hussein_taher@outlook.com
build-type:           Simple
extra-source-files:   README.md

executable aoc-1
  hs-source-dirs:       src
  main-is:              aoc-1.hs
  build-depends:        base

executable aoc-2
  hs-source-dirs:       src
  main-is:              aoc-2.hs
  build-depends:        base,
                        text

executable aoc-3
  hs-source-dirs:       src
  main-is:              aoc-3.hs
  build-depends:        base

executable aoc-4
  hs-source-dirs:       src
  main-is:              aoc-4.hs
  build-depends:        base,
                        split

executable aoc-5
  hs-source-dirs:       src
  main-is:              aoc-5.hs
  build-depends:        base

source-repository head
  type:     git
  location: git://github.com/Husenap/advent-of-code.git